--- a/导航推导.md
+++ b/导航推导.md
@@ -9,3 +9,64 @@
 ![摄像机模型与标定 - 小企鹅 - 企鹅的博客](http://img2.ph.126.net/MAo9PAoFNS2z41xE8_Am5A==/3270457754501304191.jpg) 
 
 $Q$点为相机坐标系下的实际物体点坐标，$q$为投影后的坐标，则有
+$$
+\left[ {\begin{array}{*{20}{c}}
+x\\
+y\\
+1
+\end{array}} \right] = \frac{1}{{{Z_c}}}\left[ {\begin{array}{*{20}{c}}
+f&0&0\\
+0&f&0\\
+0&0&1
+\end{array}} \right]\left[ {\begin{array}{*{20}{c}}
+{{X_c}}\\
+{{Y_c}}\\
+{{Z_c}}
+\end{array}} \right]
+$$
+令像素的物理尺寸为$dx,dy$，则像素坐标$(u,v)$可以表示为
+$$
+\left[ {\begin{array}{*{20}{c}}
+
+u\\
+
+v
+
+\end{array}} \right] = \left[ {\begin{array}{*{20}{c}}
+
+{\frac{x}{{dx}} + {u_0}}\\
+
+{\frac{y}{{dy}} + {v_0}}
+
+\end{array}} \right]
+$$
+齐次坐标变换后可表示为
+$$
+\left[ {\begin{array}{*{20}{c}}
+u\\
+v\\
+1
+\end{array}} \right] = \frac{1}{{{Z_c}}}\left[ {\begin{array}{*{20}{c}}
+{\frac{1}{{dx}}}&0&{{u_0}}\\
+0&{\frac{1}{{dy}}}&{{v_0}}\\
+0&0&1
+\end{array}} \right]\left[ {\begin{array}{*{20}{c}}
+f&0&0\\
+0&f&0\\
+0&0&1
+\end{array}} \right]\left[ {\begin{array}{*{20}{c}}
+{{X_c}}\\
+{{Y_c}}\\
+{{Z_c}}
+\end{array}} \right]
+$$
+右侧的两个矩阵乘积即为内参矩阵：
+$$
+\left[ {\begin{array}{*{20}{c}}
+{\frac{f}{{dx}}}&0&{{u_0}}\\
+0&{\frac{f}{{dy}}}&{{v_0}}\\
+0&0&1
+\end{array}} \right]
+$$
+**注意**：*这里的内参矩阵值均为像素*
+
