--- a/导航推导.md
+++ b/导航推导.md
@@ -70,3 +70,46 @@ $$
 $$
 **注意**：*这里的内参矩阵值均为像素*
 
+相机外参数为$P=[R|t]$，表示相机坐标系与世界坐标系的关系，世界坐标系定义通惯性系，$R,t$表示相机坐标系的原点的平移与旋转，即
+$$
+\left[ {\begin{array}{*{20}{c}}
+{{Q_c}}\\
+1
+\end{array}} \right] = \left[ {\begin{array}{*{20}{c}}
+R&t\\
+0&1
+\end{array}} \right]\left[ {\begin{array}{*{20}{c}}
+{{Q_w}}\\
+1
+\end{array}} \right]
+$$
+将内外参合并则有：
+$$
+\left[ {\begin{array}{*{20}{c}}
+u\\
+v\\
+1
+\end{array}} \right] = \frac{1}{{{Z_c}}}\left[ {\begin{array}{*{20}{c}}
+{\frac{f}{{dx}}}&0&{{u_0}}&0\\
+0&{\frac{f}{{dy}}}&{{v_0}}&0\\
+0&0&{1}&0
+\end{array}} \right]\left[ {\begin{array}{*{20}{c}}
+R&t\\
+0&1
+\end{array}} \right]\left[ {\begin{array}{*{20}{c}}
+{{Q_w}}\\
+1
+\end{array}} \right]
+$$
+
+#### 小结
+
+- 如果只考虑相机系下的点的表示，则内参矩阵可以满足
+- 内参矩阵的表示有很多种，如果使用MATLAB等工具需要确定计算的内参矩阵是什么形式
+- 通过特征匹配等方法得到的像素系下的特征点坐标，可以根据惯性系坐标来推算外参矩阵，即已知$u,v,Q_w$可以推算$R,t$和内参矩阵，即标定。
+- 通过双目算法得到的点坐标为相机系坐标，可根据惯性系特征不动的假设推算相机的相对运动，即视觉里程计
+
+### 特征提取与跟踪
+
+
+
