--- a/导航推导.md
+++ b/导航推导.md
@@ -113,9 +113,8 @@ $$
 
 特征提取的原理是通过图像上的一些色彩变化的规律来确定投影物体的世界坐标和投影坐标关系。目前好用且常见的方法包括：
 
-- SIFT：
-- SURF：
-- KAZE：
-- BRISK ：
-- ORB：
+- SURF：2006年提出
+- KAZE：ICCV 2011 提出
+- BRISK ：ICCV 2012 提出
+- ORB：2011年提出
 
