--- a/导航推导.md
+++ b/导航推导.md
@@ -60,7 +60,7 @@ f&0&0\\
 {{Z_c}}
 \end{array}} \right]
 $$
-右侧的两个矩阵乘积即为内参矩阵：
+右侧的两个矩阵乘积即为内参矩阵$K$：
 $$
 \left[ {\begin{array}{*{20}{c}}
 {\frac{f}{{dx}}}&0&{{u_0}}\\
@@ -122,5 +122,87 @@ $$
 
 - 特征点检测需要在数量、准确性和速度三个方面上进行权衡，难以兼顾
 
-### 偏差分析
+## 双目定位
+
+### 基本原理
+
+根据投影成像原理(6)，在对双目相机标定后，则内参矩阵$K_l,K_r$均已知，令$R_c,t_c$为左相机到右相机的旋转和平移矩阵，双目相机下有如下的方程：
+$$
+\left[ {\begin{array}{*{20}{c}}
+u_l\\
+v_l\\
+1
+\end{array}} \right] = \frac{1}{{{Z_{cl}}}}K_l\left[ {\begin{array}{*{20}{c}}
+R_l&t_l\\
+0&1
+\end{array}} \right]\left[ {\begin{array}{*{20}{c}}
+{{Q_w}}\\
+1
+\end{array}} \right]
+\\
+\left[ {\begin{array}{*{20}{c}}
+{{u_r}}\\
+{{v_r}}\\
+1
+\end{array}} \right] = \frac{1}{{{Z_{cr}}}}{K_r}\left[ {\begin{array}{*{20}{c}}
+{{R_c}{R_l}}&{{R_c}{t_l} + {t_c}}\\
+0&1
+\end{array}} \right]\left[ {\begin{array}{*{20}{c}}
+{{Q_w}}\\
+1
+\end{array}} \right]
+$$
+单目标定下$R_l,t_l$已知，则$R_c,t_c$可以计算得出，则令
+$$
+\left\{ \begin{array}{l}
+\left[ {\begin{array}{*{20}{c}}
+{{u_l}}\\
+{{v_l}}\\
+1
+\end{array}} \right] = \frac{1}{{{Z_{cl}}}}{K_l}\left[ {\begin{array}{*{20}{c}}
+{{X_{cl}}}\\
+{{Y_{cl}}}\\
+{{Z_{cl}}}
+\end{array}} \right]\\
+\left[ {\begin{array}{*{20}{c}}
+{{u_r}}\\
+{{v_r}}\\
+1
+\end{array}} \right] = \frac{1}{{{Z_{cr}}}}{K_r}\left[ {\begin{array}{*{20}{c}}
+{{R_c}}&{{t_c}}\\
+0&1
+\end{array}} \right]\left[ {\begin{array}{*{20}{c}}
+{{X_{cl}}}\\
+{{Y_{cl}}}\\
+{{Z_{cl}}}
+\end{array}} \right]\\
+{Z_{cr}} = \left[ {\begin{array}{*{20}{c}}
+0&0&1
+\end{array}} \right]\left[ {\begin{array}{*{20}{c}}
+{{R_c}}&{{t_c}}\\
+0&1
+\end{array}} \right]\left[ {\begin{array}{*{20}{c}}
+{{X_{cl}}}\\
+{{Y_{cl}}}\\
+{{Z_{cl}}}
+\end{array}} \right]
+\end{array} \right.
+$$
+式(8)中，如果假定两个相机的主光轴平行，则$Z_{cl}$和$Z_{cr}$是相等的，则左右相机匹配的一组特征点可提供四组独立方程，可以解$X_{cl},Y_{cl},Z_{cl},Z_{cr}$四组变量，如果不平行，则定义：
+$$
+R_c=\left[ {\begin{array}{*{20}{c}}
+{{c_{11}}}&{{c_{12}}}&{{c_{13}}}\\
+{{c_{21}}}&{{c_{22}}}&{{c_{23}}}\\
+{{c_{31}}}&{{c_{32}}}&{{c_{33}}}
+\end{array}} \right],t_c =\left[ {\begin{array}{*{20}{c}}
+{t_{x}}\\
+{t_{y}}\\
+{t_{z}}
+\end{array}} \right]
+$$
+带入(8)式后3个未知量，3个方程可以求解$[X_{cl},Y_{cl},Z_{cl}]^T$。
+
+### 误差来源与分析
+
+将(8)式展开可得：
 
