--- a/导航推导.md
+++ b/导航推导.md
@@ -62,7 +62,7 @@ f&0&0\\
 $$
 右侧的两个矩阵乘积即为内参矩阵$K$：
 $$
-\left[ {\begin{array}{*{20}{c}}
+K=\left[ {\begin{array}{*{20}{c}}
 {\frac{f}{{dx}}}&0&{{u_0}}\\
 0&{\frac{f}{{dy}}}&{{v_0}}\\
 0&0&1
@@ -188,7 +188,7 @@ $$
 \end{array}} \right]
 \end{array} \right.
 $$
-式(8)中，如果假定两个相机的主光轴平行，则$Z_{cl}$和$Z_{cr}$是相等的，则左右相机匹配的一组特征点可提供四组独立方程，可以解$X_{cl},Y_{cl},Z_{cl},Z_{cr}$四组变量，如果不平行，则定义：
+式(8)中，如果左相机特征点的坐标已知，则已知特征点所在的射线，则右相机的匹配特征点仅需要提供$X$或$Y$方向的坐标即可，并不需要同时获得$u_r,v_r$。定义：
 $$
 R_c=\left[ {\begin{array}{*{20}{c}}
 {{c_{11}}}&{{c_{12}}}&{{c_{13}}}\\
@@ -200,9 +200,29 @@ R_c=\left[ {\begin{array}{*{20}{c}}
 {t_{z}}
 \end{array}} \right]
 $$
-带入(8)式后3个未知量，3个方程可以求解$[X_{cl},Y_{cl},Z_{cl}]^T$。
+带入(8)式后可求解$[X_{cl},Y_{cl},Z_{cl}]^T$。
 
 ### 误差来源与分析
 
 将(8)式展开可得：
+$$
+\left\{ \begin{array}{l}
+\left[ {\begin{array}{*{20}{c}}
+{{u_l}}\\
+{{v_l}}
+\end{array}} \right] = \left[ {\begin{array}{*{20}{c}}
+{\frac{{{f_l}}}{{d{x_l}}}\frac{{{X_{cl}}}}{{{Z_{cl}}}} + {u_{l0}}}\\
+{\frac{{{f_l}}}{{d{y_l}}}\frac{{{Y_{cl}}}}{{{Z_{cl}}}} + {v_{l0}}}
+\end{array}} \right]\\
+\left[ {\begin{array}{*{20}{c}}
+{{u_r}}\\
+{{v_r}}
+\end{array}} \right] = \left[ {\begin{array}{*{20}{c}}
+{\frac{{{f_r}}}{{d{x_r}}}\frac{{{c_{11}}{X_{cl}} + {c_{12}}{Y_{cl}} + {c_{13}}{Z_{cl}} + {t_x}}}{{{c_{31}}{X_{cl}} + {c_{32}}{Y_{cl}} + {c_{33}}{Z_{cl}} + {t_z}}} + {u_{r0}}}\\
+{\frac{{{f_r}}}{{d{y_r}}}\frac{{{c_{21}}{X_{cl}} + {c_{22}}{Y_{cl}} + {c_{23}}{Z_{cl}} + {t_y}}}{{{c_{31}}{X_{cl}} + {c_{32}}{Y_{cl}} + {c_{33}}{Z_{cl}} + {t_z}}} + {v_{r0}}}
+\end{array}} \right]
+\end{array} \right.
+$$
 
+
+这里四个方程，3个未知量，即可以将
