--- a/导航推导.md
+++ b/导航推导.md
@@ -225,4 +225,11 @@ $$
 $$
 
 
-这里四个方程，3个未知量，即可以将
+这里四个方程，3个未知量，即可以将相机系下特征的坐标求出：
+$$
+\begin{array}{l}
+{X_{cl}} = \frac{{d{x_l}\left( {{u_l} - {u_{l0}}} \right)\left( {{f_r}{t_x} - {t_z}d{x_r}\left( {{u_r} - {u_{r0}}} \right)} \right)}}{{\left( {{c_{31}}d{x_l}\left( {{u_l} - {u_{l0}}} \right) + {c_{32}}d{y_l}\left( {{v_l} - {v_{l0}}} \right) + {f_l}{c_{33}}} \right)d{x_r}\left( {{u_r} - {u_{r0}}} \right) - {f_r}\left( {{c_{11}}d{x_l}\left( {{u_l} - {u_{l0}}} \right) + {c_{12}}d{y_l}\left( {{v_l} - {v_{l0}}} \right) + {f_l}{c_{13}}} \right)}}\\
+{Y_{cl}} = \frac{{d{y_l}\left( {{v_l} - {v_{l0}}} \right)\left( {{f_r}{t_x} - {t_z}d{x_r}\left( {{u_r} - {u_{r0}}} \right)} \right)}}{{\left( {{c_{31}}d{x_l}\left( {{u_l} - {u_{l0}}} \right) + {c_{32}}d{y_l}\left( {{v_l} - {v_{l0}}} \right) + {f_l}{c_{33}}} \right)d{x_r}\left( {{u_r} - {u_{r0}}} \right) - {f_r}\left( {{c_{11}}d{x_l}\left( {{u_l} - {u_{l0}}} \right) + {c_{12}}d{y_l}\left( {{v_l} - {v_{l0}}} \right) + {f_l}{c_{13}}} \right)}}\\
+{Z_{cl}} = \frac{{{f_l}\left( {{f_r}{t_x} - {t_z}d{x_r}\left( {{u_r} - {u_{r0}}} \right)} \right)}}{{\left( {{c_{31}}d{x_l}\left( {{u_l} - {u_{l0}}} \right) + {c_{32}}d{y_l}\left( {{v_l} - {v_{l0}}} \right) + {f_l}{c_{33}}} \right)d{x_r}\left( {{u_r} - {u_{r0}}} \right) - {f_r}\left( {{c_{11}}d{x_l}\left( {{u_l} - {u_{l0}}} \right) + {c_{12}}d{y_l}\left( {{v_l} - {v_{l0}}} \right) + {f_l}{c_{13}}} \right)}}
+\end{array}
+$$
