--- a/导航推导.md
+++ b/导航推导.md
@@ -233,3 +233,12 @@ $$
 {Z_{cl}} = \frac{{{f_l}\left( {{f_r}{t_x} - {t_z}d{x_r}\left( {{u_r} - {u_{r0}}} \right)} \right)}}{{\left( {{c_{31}}d{x_l}\left( {{u_l} - {u_{l0}}} \right) + {c_{32}}d{y_l}\left( {{v_l} - {v_{l0}}} \right) + {f_l}{c_{33}}} \right)d{x_r}\left( {{u_r} - {u_{r0}}} \right) - {f_r}\left( {{c_{11}}d{x_l}\left( {{u_l} - {u_{l0}}} \right) + {c_{12}}d{y_l}\left( {{v_l} - {v_{l0}}} \right) + {f_l}{c_{13}}} \right)}}
 \end{array}
 $$
+
+#### 特征距离对误差的影响
+
+![1529249737320](C:\Users\40561\AppData\Local\Temp\1529249737320.png)
+
+相机参数一致，主轴间距50mm，特征点距离从0.45m到6.25m，对特征点的像素坐标增加1个像素的扰动，则误差偏差随着特征的变远而增大，在该相机参数下，误差小于10mm的特征距离为左图绿色范围，即特征距离应在1m以内，超过1m后特征误差将大于1cm并随着距离的增加而快速变大。解决方法是增加焦距或增大两路镜头的主轴间距，如果能够实现3m内1cm误差，则需要200mm的焦距，问题比较大，采用USB摄像头，焦距较小，图像经过处理校正，无法确定真实的相机焦距。
+
+#### 标定偏差的影响
+
