--- a/导航推导.md
+++ b/导航推导.md
@@ -255,7 +255,10 @@ $$
 ## 光流法
 
 ## 视觉里程计方法
+### 直接法（Direct Sparse Odometry）
+直接法通过直接根据图像的像素信息来计算相机运动，这类方法为直接法，随着一批不需提取特征的方法，如LSD（选取整幅图像中有梯度的部分来采用直接法，这种方法称为半稠密方法（simi-dense）），SVO（选取关键点来采用直接法，这类方法称为稀疏方法（sparse）），直接法渐露其自身优势。
 ### SVO方法
+
 这个方法不错，可以试试
 
 
@@ -264,5 +267,4 @@ $$
 
 ## 姿态结算
 
-仅通过加速度计和陀螺仪无法准确结算偏航角度，随着陀螺仪积分时间的加大，偏航角度误差会越来越大。本体系下加速度计的数值为
-
+仅通过加速度计和陀螺仪无法准确结算偏航角度，随着陀螺仪积分时间的加大，偏航角度误差会越来越大。
