--- a/导航推导.md
+++ b/导航推导.md
@@ -257,6 +257,13 @@ $$
 ## 视觉里程计方法
 ### 直接法（Direct Sparse Odometry）
 直接法通过直接根据图像的像素信息来计算相机运动，这类方法为直接法，随着一批不需提取特征的方法，如LSD（选取整幅图像中有梯度的部分来采用直接法，这种方法称为半稠密方法（simi-dense）），SVO（选取关键点来采用直接法，这类方法称为稀疏方法（sparse）），直接法渐露其自身优势。
+
+#### 基本假设
+
+同一空间三维点在各个视角下测到的灰度值不变（因此假设所在平面是漫反射，没有遮挡，没有光照变化） 
+
+
+
 ### SVO方法
 
 这个方法不错，可以试试
