--- a/导航推导.md
+++ b/导航推导.md
@@ -262,7 +262,56 @@ $$
 
 同一空间三维点在各个视角下测到的灰度值不变（因此假设所在平面是漫反射，没有遮挡，没有光照变化） 
 
-假设第一张图中的相机位姿为$I$,则第二张图像的位姿则为$RI+t$，则根据直接法，
+假设第一张图中的相机位姿为$I$,则第二张图像的位姿则为$RI+t$，则根据直接法，则有
+$$
+{\pi _{\rm{i}}} = \left[ {\begin{array}{*{20}{c}}
+u\\
+v\\
+1
+\end{array}} \right] = K\left[ {\begin{array}{*{20}{c}}
+R&t
+\end{array}} \right]{\left[ {\begin{array}{*{20}{c}}
+{{p_x}}\\
+{{p_y}}\\
+{{p_z}}\\
+1
+\end{array}} \right]_i}
+$$
+
+$$
+\left\{ \begin{array}{l}
+{\left\langle {{\pi _{\rm{i}}}} \right\rangle _1} = \left[ {\begin{array}{*{20}{c}}
+u\\
+v\\
+1
+\end{array}} \right] = K\left[ {\begin{array}{*{20}{c}}
+I&0
+\end{array}} \right]{\left[ {\begin{array}{*{20}{c}}
+{{p_x}}\\
+{{p_y}}\\
+{{p_z}}\\
+1
+\end{array}} \right]_i}\\
+{\left\langle {{\pi _{\rm{i}}}} \right\rangle _2} = \left[ {\begin{array}{*{20}{c}}
+u\\
+v\\
+1
+\end{array}} \right] = K\left[ {\begin{array}{*{20}{c}}
+R&t
+\end{array}} \right]{\left[ {\begin{array}{*{20}{c}}
+{{p_x}}\\
+{{p_y}}\\
+{{p_z}}\\
+1
+\end{array}} \right]_i}
+\end{array} \right.
+$$
+
+
+
+
+
+
 
 ### SVO方法
 
