--- a/导航推导.md
+++ b/导航推导.md
@@ -293,8 +293,8 @@ I&0
 1
 \end{array}} \right]_i}\\
 {\left\langle {{\pi _{\rm{i}}}} \right\rangle _2} = \left[ {\begin{array}{*{20}{c}}
-u\\
-v\\
+{u'}\\
+{v'}\\
 1
 \end{array}} \right] = K\left[ {\begin{array}{*{20}{c}}
 R&t
@@ -307,9 +307,11 @@ R&t
 \end{array} \right.
 $$
 
-
-
-
+这里的内参$K$不会发生变化，根据基本假设，即$${\left\langle {{\pi _{\rm{i}}}} \right\rangle _1}$$点的图像灰度值$${I_{{{\left\langle {{\pi _{\rm{i}}}} \right\rangle }_1}}}$$应与第二帧对应坐标处的灰度值$${I_{{{\left\langle {{\pi _{\rm{i}}}} \right\rangle }_2}}}$$保持一致，则可以构建优化模型：
+$$
+\min J = \sum\limits_{i = 1}^{M \times N} {\left\| {{I_{{{\left\langle {{\pi _{\rm{i}}}} \right\rangle }_1}}} - {I_{{{\left\langle {{\pi _{\rm{i}}}} \right\rangle }_2}}}} \right\|_2^2}  = \sum\limits_{i = 1}^{M \times N} {\left\| {{I_{{{\left\langle {{\pi _{\rm{i}}}} \right\rangle }_1}}} - {I_{{{\left\langle {R{\pi _{\rm{i}}} + t} \right\rangle }_1}}}} \right\|_2^2} 
+$$
+其中优化参数为相机的$R,t$。
 
 
 
