--- a/导航推导.md
+++ b/导航推导.md
@@ -313,6 +313,14 @@ $$
 $$
 其中优化参数为相机的$R,t$。
 
+这里的推导常见通过李导数来实现，即
+$$
+\begin{array}{rcl}
+e\left( {\xi  \oplus \delta \xi } \right) &=& {I_1}\left( {\frac{1}{{{Z_1}}}DKP} \right) - {I_2}\left( {\frac{1}{{{Z_2}}}DK\exp \left( {\delta {\xi ^ \wedge }} \right)\exp \left( {{\xi ^ \wedge }} \right)P} \right)\\
+ &\approx& {I_1}\left( {\frac{1}{{{Z_1}}}DKP} \right) - {I_2}\left( {\frac{1}{{{Z_2}}}DK\left( {1 + \delta {\xi ^ \wedge }} \right)\exp \left( {{\xi ^ \wedge }} \right)P} \right)\\
+ &=& {I_1}\left( {\frac{1}{{{Z_1}}}DKP} \right) - {I_2}\left( {\frac{1}{{{Z_2}}}DK\exp \left( {{\xi ^ \wedge }} \right)P + \frac{1}{{{Z_2}}}DK\delta {\xi ^ \wedge }\exp \left( {{\xi ^ \wedge }} \right)P} \right)
+\end{array}
+$$
 
 
 ### SVO方法
