--- a/导航推导.md
+++ b/导航推导.md
@@ -6,7 +6,7 @@
 
 以小孔成像为模型，小孔为原点，垂直成像平面的轴为$z$轴，则z轴表示`principal axis`，即相机的主轴。该坐标系为相机坐标系，投影至像平面的点$q$的位置为物理距离(m)
 
-![摄像机模型与标定 - 小企鹅 - 企鹅的博客](http://img2.ph.126.net/MAo9PAoFNS2z41xE8_Am5A==/3270457754501304191.jpg) 
+![3270457754501304191](D:\Codes\githubcodes\StereoVision-InertialSensorFilter\3270457754501304191.jpg)
 
 $Q$点为相机坐标系下的实际物体点坐标，$q$为投影后的坐标，则有
 $$
@@ -251,6 +251,48 @@ $$
 ## 单目法
 
 通过单个相机实现定位
+
+### 对极几何估计的新方法
+
+![2016-06-20-193137_1201x446_scrot](D:\Codes\githubcodes\StereoVision-InertialSensorFilter\2016-06-20-193137_1201x446_scrot.png)
+
+根据SLAM14讲的定义，将第一个坐标系下的特征点的相机坐标系(C系)的坐标记为$P=[X,Y,Z]^T$。根据小孔成像的模型，可以得到两个坐标系下的投影方程分别为$s_1p_1=KP$和$s_2p_2=K(RP+t)$，其中$K$为相机内参矩阵，$s_1,s_2$为投影矩阵中的$\frac{1}{Z_c}$，如果用像素表示坐标，则这里认为是个缩放因子（即与分辨率有关）。投影方程用齐次坐标表示后为：
+$$
+\left[ {\begin{array}{*{20}{c}}
+x\\
+y\\
+1
+\end{array}} \right] =\left[ {\begin{array}{*{20}{c}}
+\frac{f}{Z_c}&0&0&0\\
+0&\frac{f}{Z_c}&0&0\\
+0&0&\frac{1}{Z_c}&0
+\end{array}} \right]\left[ {\begin{array}{*{20}{c}}
+{{X_c}}\\
+{{Y_c}}\\
+{{Z_c}}\\
+1
+\end{array}} \right]
+$$
+将内参矩阵记为上面的扩展形式，则有：
+$$
+p_1=KP\\
+p_2=K(RP+t)
+$$
+则有：
+$$
+RK^{-1}p_1+t=K^{-1}p_2\\
+t^{ \wedge }K^{-1}p_2=t^{ \wedge }RK^{-1}p_1\\
+(K^{-1}p_2)^Tt^{ \wedge }K^{-1}p_2=(K^{-1}p_2)^Tt^{ \wedge }RK^{-1}p_1
+$$
+
+
+这里的$(K^{-1}p_2)^Tt^{ \wedge }K^{-1}p_2$与$t$和$(K^{-1}p_2)$都垂直，因此左边为0，重新改写：
+$$
+p_2^TK^{-T}t^{ \wedge }RK^{-1}p_1\\
+E=t^{ \wedge }R,F=K^{-T}EK^{-1}\\
+p_2^TFp_1=0
+$$
+这个式子即对极约束
 
 ## 光流法
 
