--- a/导航推导.md
+++ b/导航推导.md
@@ -292,7 +292,7 @@ p_2^TK^{-T}t^{ \wedge }RK^{-1}p_1\\
 E=t^{ \wedge }R,F=K^{-T}EK^{-1}\\
 p_2^TFp_1=0
 $$
-这个式子即对极约束
+这个式子即对极约束，根据对极约束，求解矩阵$E$即可反解运动信息$R,t$，根据书中定义，$E$为$3\times3$的矩阵，可以采用8对特征点求解。
 
 ## 光流法
 
