--- a/导航推导.md
+++ b/导航推导.md
@@ -280,19 +280,28 @@ p_2=K(RP+t)
 $$
 则有：
 $$
-RK^{-1}p_1+t=K^{-1}p_2\\
-t^{ \wedge }K^{-1}p_2=t^{ \wedge }RK^{-1}p_1\\
-(K^{-1}p_2)^Tt^{ \wedge }K^{-1}p_2=(K^{-1}p_2)^Tt^{ \wedge }RK^{-1}p_1
+\begin{array}{rcl}
+RK^{-1}p_1+t&=&K^{-1}p_2\\
+t^{ \wedge }K^{-1}p_2&=&t^{ \wedge }RK^{-1}p_1\\
+(K^{-1}p_2)^Tt^{ \wedge }K^{-1}p_2&=&(K^{-1}p_2)^Tt^{ \wedge }RK^{-1}p_1\\
+\end{array}
 $$
 
 
 这里的$(K^{-1}p_2)^Tt^{ \wedge }K^{-1}p_2$与$t$和$(K^{-1}p_2)$都垂直，因此左边为0，重新改写：
 $$
-p_2^TK^{-T}t^{ \wedge }RK^{-1}p_1\\
-E=t^{ \wedge }R,F=K^{-T}EK^{-1}\\
-p_2^TFp_1=0
+\begin{array}{*{20}{rcl}}
+p_2^TK^{-T}t^{ \wedge }RK^{-1}p_1&=&0\\
+E&=&t^{ \wedge }R\\
+F&=&K^{-T}EK^{-1}\\
+p_2^TFp_1&=&0\\
+\end{array}
 $$
 这个式子即对极约束，根据对极约束，求解矩阵$E$即可反解运动信息$R,t$，根据书中定义，$E$为$3\times3$的矩阵，可以采用8对特征点求解。
+
+### RANSAC方法
+
+根据特征点计算得到的$E$矩阵对特征点的依赖较强，可以通过RANSAC方法进行筛选，
 
 ## 光流法
 
